# cpp-project-scanner-master

./: CMakeLists.txt  Dockerfile  README.md  build.sh
src/: lab.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/test_data/empty_project/: README.txt
tests/test_data/mixed_project/: programm.cpp
tests/test_data/mixed_project/headers/: api.h
tests/test_data/sample_project/: main.cpp
